[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "FESutils"
version = "0.1.0"
description = "Utilities for Free Energy Surface calculations"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "numba",
    "matplotlib",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/preen"

[tool.setuptools.packages.find]
where = ["src"]
